HtmlUi: Table virtual scrolling: Add filler div for a more less correct height
Without filler div, scrollbar has always the same size independent of
the amount of rows. This has the problem that scrolling on large
datasets is very tricky.

--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/table/Table.css
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/table/Table.css
@@ -55,7 +55,8 @@
 }
 
 .table-data-fill {
-  width: 100%;
+  background: linear-gradient(to bottom, transparent, transparent 97.5%, @border-color 97.5%,@border-color);
+  background-size: 100% 40px; //FIXME CGU adjust row height for regular table
 }
 
 .table-row,
